--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,46 @@
+
+@keyframes appearance {
+  from {
+    max-height: 0;
+    transform: translateY(-50%); 
+  }
+  to {
+    max-height: 1000;
+    transform: translateY(0%);}
+}
+
+.rotateOpeningIcon {
+  animation: on 0.35s forwards;
+}
+
+@keyframes on {
+  from {rotate:90deg}
+  to {rotate: 0deg}
+}
+
+.rotateClosingIcon {
+  animation: off 0.35s forwards;
+}
+
+@keyframes off {
+  from {rotate:90deg}
+  to {rotate: 180deg}
+}
+
+
+@keyframes disappearance {
+  from {
+    height: 100%;
+    transform: translateY(0%); 
+  }
+  to {
+    height: 0;
+    transform: translateY(-70%);}
+}
+
+
+
+
 .faqs {
     width: 100%;
     margin-top: 30px;
@@ -8,23 +51,23 @@
     align-items: center;
   
     .faq {
-      
+      border: none;
       width: 100%;
-      background: #ff6060;
-      border-radius: 5px;
-      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
   
       .faq-question {
+      border-radius: 5px;
+      background: #ff6060;
         position: relative;
         font-size: calc(9px + 1vw);
         padding: 12px;
-        
-        transition: all 0.4s ease;
+        z-index: 100;
         color: white;
         display: flex;
         flex-direction: row;
         align-items: normal;
         justify-content: space-between;
+
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
   
         button {
           color: white;
@@ -36,26 +79,50 @@
       }
   
       .faq-answer {
-        opacity: 0;
+       
+        z-index: -100;
         max-height: 0;
         overflow: hidden;
-        transition: all 0.2s ease;
         background-color: #f6f6f6;
         color: #ff6060;
         list-style: none;
         font-size: calc(10px + 0.5vw);
+        animation: disappearance 0.8s linear;
+      border-radius: 5px;
+
+        
       }
   
       &.open {
         
-        
-
         .faq-answer {
+          position: relative;
           max-height: 1000px;
           opacity: 1;
           padding: 15px;
           line-height: 1.5;
+          z-index: -100;
+
+        
+        animation: appearance 0.4s linear;
+
           
+        }
+
+        &.close {
+
+          .faq-answer {
+            opacity: 0;
+            z-index: -100;
+            max-height: 0;
+            overflow: hidden;
+            background-color: #f6f6f6;
+            color: #ff6060;
+            list-style: none;
+            font-size: calc(10px + 0.5vw);
+            animation: disappearance 0.8s linear;
+          border-radius: 5px;
+          }
         }
       }
     }
